
8 Dec 2022
* Bug fixed causing models with multiple pumping bores to fail during build.
* Added 'Duplicate Selected Models' to GUI context menu.

13 Dec 2022
* User feedback improved when files are opened by changing the cursor to a watch. This was required because some users have large head files that are slow to open.
* Outlier detection bore ID selection bug fixed that caused the list of bores for selection to be hidden from the user.

21 Dec 2022
* Status bar added to all GUI LHS tabs. This was added to avoid the need to scroll left to identify the label of the currently displayed model (ie on RHS).
* Removed redundent code for <=2018 Matlab exporting of figures.
* Model construction model status tab shifted down to align nicely with LHS panel top.

11 Mar 2023
* Bug fixed in table export and import that caused the dates to no longer have the left two digits of the year.
* Snow melt model added to one and two layer soil models. 
* Minor version number increase.

17 March 2023
* Bug fixed in the dropdown list of model labels within simulation tab. It occured when the simulation table is empty.
* Bug fixed in the use of new simulation forcing data when pumping downscaling (pumpingRate_SAestimation.m).
* Outlines removed from grey fill (for plotting of heads) to better show dynamcis.

29 March 2023
* Keystroke shortcuts added see https://github.com/peterson-tim-j/HydroSight/wiki/Graphical-interface#keystroke-shortcuts
* Request for GitHub stars added to opening GUI title bar.

1 April 2023
* Bug fixed causing soil moisture mass balance errors to not be shown. This only arose for models not having snow melt.

4 April 2023
* Results export button removed and replaced with a drop-down within the calibration and simulation data tables. This allows exporting of forcing data, e.g. recharge, at the use defined time step.
* Results table chnaged to non-editable.
* Splash date and version number shifted to right aligned.